Sec5_Chap163-XXX: optimized MVC-Tests